--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1>Image Gallery!</h1>
     </header>
 
-    <div id="thumbnail-container"></div>
-    <div id="main-image-container"></div>
+    <div id="thumbnail-container">text within the thumbnail container</div>
+    <div id="main-image-container">text within the main image container</div>
     <button></button>
     <button></button>
     <h2>Let's get started</h2>
