thumbnail images are now displaying in the browser

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Image Gallery</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="./app.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="./assets/fav-icon.png" />
+    <!--code from w3 schools. I understand the rel and href but I don't fully understand the type here, x-icon??-->
   </head>
   <body>
     <header>
