--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
     <!--code from w3 schools. I understand the rel and href but I don't fully understand the type here, x-icon??-->
   </head>
   <body>
-    <header>
-      <h1>Image Gallery!</h1>
-    </header>
-
     <div id="thumbnail-container"></div>
     <div id="main-image-container"></div>
-    <button id="left-click"></button>
-    <button id="right-click"></button>
+    <button id="previous"><</button>
+    <button id="next">></button>
   </body>
 </html>
