another attemptt at having functional buttons; incomplete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="thumbnail-container"></div>
     <div id="main-image-container"></div>
-    <button id="previous"><</button>
-    <button id="next">></button>
+    <button onClick="prev()" id="previous"><</button>
+    <button onClick="next()" id="next">></button>
   </body>
 </html>
